# f1_apex_guardian

./: .gitignore  Dockerfile  README.md  app.py  data_investigation.ipynb  mlflow.db  pyproject.toml  requirements.txt
.github/: README.md
.github/workflows/: hf_sync.yml  pipeline.yml
src/: automation.py  challenger.py  drift_detector.py  ingestion.py  maintenance.py  model.py  processing.py  s3_manager.py
