[project]
name = "f1-apex-guardian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.61",
    "dagshub>=0.6.8",
    "dotenv>=0.9.9",
    "fastf1>=3.8.1",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pandera>=0.29.0",
    "plotly>=6.6.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
    "watchdog>=6.0.0",
]
